--- a/Versta/Views/Shared/_Layout.cshtml
+++ b/Versta/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Create new order</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Create">Create new order</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Details">List of ordersy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">List of ordersy</a>
                         </li>
                     </ul>
                 </div> 
