--- a/Versta/Views/Shared/_Layout.cshtml
+++ b/Versta/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Create">Create new order</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">List of ordersy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">List of orders</a>
                         </li>
                     </ul>
                 </div> 
