--- a/Versta/Views/Orders/Read.cshtml
+++ b/Versta/Views/Orders/Read.cshtml
@@ -1,15 +1,21 @@
 ﻿@model Versta.Models.Order
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Read";
 }
 
-<h1>Details</h1>
+<h1>Read</h1>
 
 <div>
     <h4>Order</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SendCity)
         </dt>
@@ -49,6 +55,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
