Add Services and Interfaces

--- a/Versta/Views/Orders/Create.cshtml
+++ b/Versta/Views/Orders/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Versta.Models.Order
+﻿@model Order
 
 @{
     ViewData["Title"] = "Create";
@@ -48,7 +48,6 @@
         </form>
     </div>
 </div>
-
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
